--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
         <!--Project and shell script-->
         <ffprobe.characteriser>ffprobe-characteriser</ffprobe.characteriser>
 
+        <!--workflow name for state monitor-->
+        <workflow.name>${project.artifactId}</workflow.name>
 
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
