--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
         <!--Project and shell script-->
         <ffprobe.characteriser>ffprobe-characteriser</ffprobe.characteriser>
 
+        <workflow.completed>workflow-completed</workflow.completed>
+
+        <workflow.started>workflow-completed</workflow.started>
+
         <!--workflow name for state monitor-->
         <workflow.name>${project.artifactId}</workflow.name>
 
