[maven-release-plugin] prepare release vhs-ingest-workflow-0.1

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dk.statsbiblioteket.medieplatform</groupId>
     <artifactId>vhs-ingest-workflow</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
 
@@ -202,25 +202,9 @@
                                     <target>
 
                                         <!-- Requires that a private/public key login has been enabled for this account -->
-                                        <sshexec host="${integrationtest.host}"
-                                                 username="${integrationtest.username}"
-                                                 keyfile="${integrationtest.keyFile}"
-                                                 command=" cd ${integrationtest.basedir};
-                                                           rm -rf vhs-ingest*;
-                                                           rm -rf services/*;"
-                                                 failonerror="true" />
-                                        <scp file="${project.build.directory}/${project.build.finalName}-bundle.tar.gz"
-                                             toDir="${integrationtest.username}@${integrationtest.host}:${integrationtest.basedir}"
-                                             keyfile="${integrationtest.keyFile}" />
-                                        <sshexec host="${integrationtest.host}"
-                                                 username="${integrationtest.username}"
-                                                 keyfile="${integrationtest.keyFile}"
-                                                 command="
-                                                 cd ${integrationtest.basedir};
-                                                 tar xfz ${project.build.finalName}-bundle.tar.gz;
-                                                 mkdir ${integrationtest.workflowdir};
-                                                 mv ${project.build.finalName}/* ${integrationtest.workflowdir}/;"
-                                                 failonerror="true" />
+                                        <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command=" cd ${integrationtest.basedir};                                                            rm -rf vhs-ingest*;                                                            rm -rf services/*;" failonerror="true" />
+                                        <scp file="${project.build.directory}/${project.build.finalName}-bundle.tar.gz" toDir="${integrationtest.username}@${integrationtest.host}:${integrationtest.basedir}" keyfile="${integrationtest.keyFile}" />
+                                        <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command="                                                  cd ${integrationtest.basedir};                                                  tar xfz ${project.build.finalName}-bundle.tar.gz;                                                  mkdir ${integrationtest.workflowdir};                                                  mv ${project.build.finalName}/* ${integrationtest.workflowdir}/;" failonerror="true" />
                                         <!--Find deply folder ${project.build.outputDirectory}-->
                                         <!--unzip package-->
                                     </target>
@@ -241,11 +225,7 @@
                                     <!--Run workflow-->
 
                                     <target>
-                                        <sshexec host="${integrationtest.host}"
-                                                 username="${integrationtest.username}"
-                                                 keyfile="${integrationtest.keyFile}"
-                                                 command="${integrationtest.workflowdir}/integrationTests/runIntegrationTests.sh"
-                                                 failonerror="true">
+                                        <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command="${integrationtest.workflowdir}/integrationTests/runIntegrationTests.sh" failonerror="true">
                                         </sshexec>
                                     </target>
                                 </configuration>
