--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dk.statsbiblioteket.medieplatform</groupId>
     <artifactId>vhs-ingest-workflow</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
     <packaging>pom</packaging>
 
 
@@ -207,7 +207,7 @@
                                         <!-- Requires that a private/public key login has been enabled for this account -->
                                         <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command=" cd ${integrationtest.basedir}; rm -rf vhs-ingest*; rm -rf services/*;" failonerror="true" />
                                         <scp file="${project.build.directory}/${project.build.finalName}-bundle.tar.gz" toDir="${integrationtest.username}@${integrationtest.host}:${integrationtest.basedir}" keyfile="${integrationtest.keyFile}" />
-                                        <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command=" cd ${integrationtest.basedir}; tar xfz ${project.build.finalName}-bundle.tar.gz; mkdir ${integrationtest.workflowdir};                                                  mv ${project.build.finalName}/* ${integrationtest.workflowdir}/;" failonerror="true" />
+                                        <sshexec host="${integrationtest.host}" username="${integrationtest.username}" keyfile="${integrationtest.keyFile}" command=" cd ${integrationtest.basedir}; tar xfz ${project.build.finalName}-bundle.tar.gz; mkdir ${integrationtest.workflowdir}; mv ${project.build.finalName}/* ${integrationtest.workflowdir}/;" failonerror="true" />
                                         <!--Find deply folder ${project.build.outputDirectory}-->
                                         <!--unzip package-->
                                     </target>
