--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${doms.ingester.vhsfile}</artifactId>
-            <version>0.1.6</version>
+            <version>1.1-SNAPSHOT</version>
             <classifier>bundle</classifier>
             <type>zip</type>
         </dependency>
