--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <!--Shorthand-->
         <medieplatform>dk.statsbiblioteket.medieplatform</medieplatform>
 
-	<!-- file copier -->
+	    <!-- file copier -->
         <file.copier>file-copier</file.copier>
 
         <!--maven package name-->
@@ -44,7 +44,6 @@
 
         <!--Shell script name-->
         <ffprobe.profile.validator>ffprobe-profile-validator</ffprobe.profile.validator>
-
         <!--maven project-->
         <profile.validator>profile-validator</profile.validator>
 
@@ -61,6 +60,7 @@
 
         <!--Project and shell script-->
         <ffprobe.characteriser>ffprobe-characteriser</ffprobe.characteriser>
+        <crosscheck.characteriser>crosscheck-characteriser</crosscheck.characteriser>
 
         <workflow.completed>workflow-completed</workflow.completed>
 
@@ -96,10 +96,11 @@
         </dependency>
 
         <!--Yousee FFProbe Profile Validator-->
+        <!--Yousee CrossCheck Profile Validator-->
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${profile.validator}</artifactId>
-            <version>0.4</version>
+            <version>0.6</version>
             <type>zip</type>
         </dependency>
 
@@ -121,9 +122,19 @@
             <type>zip</type>
         </dependency>
 
+        <!--Yousee FFProbe Characteriser-->
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${ffprobe.characteriser}</artifactId>
+            <version>0.12</version>
+            <classifier>bundle</classifier>
+            <type>zip</type>
+        </dependency>
+
+        <!--Yousee CrossCheck Characteriser-->
+        <dependency>
+            <groupId>${medieplatform}</groupId>
+            <artifactId>${crosscheck.characteriser}</artifactId>
             <version>0.12</version>
             <classifier>bundle</classifier>
             <type>zip</type>
