--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dk.statsbiblioteket.medieplatform</groupId>
     <artifactId>vhs-ingest-workflow</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
     <packaging>pom</packaging>
 
 
@@ -85,7 +85,8 @@
         <connection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</connection>
         <url>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</url>
         <developerConnection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</developerConnection>
-    </scm>
+      <tag>vhs-ingest-workflow-2.1</tag>
+  </scm>
 
     <dependencies>
        <dependency>
