updates to workflow, scripts, assembly for crosscheck inclusion; part 2

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 
         <!--Shell script name-->
         <ffprobe.profile.validator>ffprobe-profile-validator</ffprobe.profile.validator>
+        <crosscheck.profile.validator>crosscheck-profile-validator</crosscheck.profile.validator>
+
         <!--maven project-->
         <profile.validator>profile-validator</profile.validator>
 
