--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${doms.ingester.project}</artifactId>
-            <version>2.0</version>
+            <version>2.1-SNAPSHOT</version>
             <classifier>bundle</classifier>
             <type>zip</type>
         </dependency>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${doms.ingester.vhsfile}</artifactId>
-            <version>2.0</version>
+            <version>2.1-SNAPSHOT</version>
             <classifier>bundle</classifier>
             <type>zip</type>
         </dependency>
