--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dk.statsbiblioteket.medieplatform</groupId>
     <artifactId>vhs-ingest-workflow</artifactId>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.2</version>
     <packaging>pom</packaging>
 
 
@@ -87,7 +87,7 @@
         <connection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</connection>
         <url>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</url>
         <developerConnection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>vhs-ingest-workflow-2.2</tag>
   </scm>
 
     <dependencies>
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${doms.ingester.project}</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
             <classifier>bundle</classifier>
             <type>zip</type>
         </dependency>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>${medieplatform}</groupId>
             <artifactId>${doms.ingester.vhsfile}</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
             <classifier>bundle</classifier>
             <type>zip</type>
         </dependency>
