--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>dk.statsbiblioteket.medieplatform</groupId>
     <artifactId>vhs-ingest-workflow</artifactId>
-    <version>2.5</version>
+    <version>2.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
 
@@ -87,7 +87,7 @@
         <connection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</connection>
         <url>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</url>
         <developerConnection>scm:git:git@github.com:statsbiblioteket/vhs-ingest-workflow.git</developerConnection>
-      <tag>vhs-ingest-workflow-2.5</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
